Fix additional UI spacing issues

--- a/src/components/TestUI.css
+++ b/src/components/TestUI.css
@@ -96,12 +96,19 @@
 
 @media (min-width: 768px) {
   .device {
-    max-width: 300px;
-    height: 600px;
+    max-width: 250px;
+    height: 550px;
   }
 }
 
 @media (min-width: 1024px) {
+  .device {
+    max-width: 280px;
+    height: 600px;
+  }
+}
+
+@media (min-width: 1280px) {
   .device {
     max-width: 320px;
     height: 650px;
